changes upload file

--- a/crm_app/templates/crm/AIPages/upload2.html
+++ b/crm_app/templates/crm/AIPages/upload2.html
@@ -931,7 +931,7 @@ background: rgba(159, 159, 159, 0.3);
       <div>
         <a href="{% url "ai_guideline" %}">
         <button class="btn btn-secondary me-2">Go Back</button></a>
-        <a href="reviewA.html">
+        <a href="{% url "ai_review" %}">
         <button class="btn btn-submit-custom">Submit</button></a>
       </div>
     </div>
