--- a/crm_app/templates/crm/VisaHistory/visa_history.html
+++ b/crm_app/templates/crm/VisaHistory/visa_history.html
@@ -205,7 +205,7 @@
                                  <th>Arrival Country</th>
                                  <th>From Date</th>
                                  <th>To Date</th>
-                                 <th>Documents</th>
+                                 {% comment %} <th>Documents</th> {% endcomment %}
                               </tr>
                            </thead>
                            <tbody class="list form-check-all" hx-get="{% url 'visa_history_list' %}" hx-trigger="load, movieListChanged from:body" hx-target="this" id="search-results">
