--- a/crm_app/templates/crm/VisaHistory/visabooking_list.html
+++ b/crm_app/templates/crm/VisaHistory/visabooking_list.html
@@ -26,12 +26,15 @@
       <td>{{ visa.toDate }}</td>
       <td>
        <ul class="list-inline hstack gap-2 mb-0">
+        <li>
+            <a href=""></a>
+        </li>
          
-          <li class="list-inline-item edit" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Edit">
+          {% comment %} <li class="list-inline-item edit" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="Edit">
              <a href="#"  class="text-primary d-inline-block edit-item-btn">
              <i class="ri-folder-open-line fs-16"></i>
              </a>
-          </li>
+          </li> {% endcomment %}
           
           </li>
        </ul>
