--- a/crm_app/templates/crm/VisaHistory/visa_history.html
+++ b/crm_app/templates/crm/VisaHistory/visa_history.html
@@ -205,6 +205,7 @@
                                  <th>Arrival Country</th>
                                  <th>From Date</th>
                                  <th>To Date</th>
+                                 <th>Documents</th>
                                  {% comment %} <th>Documents</th> {% endcomment %}
                               </tr>
                            </thead>
