--- a/crm_app/templates/crm/AIPages/visaForm.html
+++ b/crm_app/templates/crm/AIPages/visaForm.html
@@ -185,6 +185,8 @@ travelToOptions.forEach(item => {
         }
 
         const finalData = {
+          //userId: signupData.userId,
+          const userId = {{ user_id|safe }};
           userId: signupData.userId,
           firstName: signupData.firstName,
           lastName: signupData.lastName,
